# cs107_project_team9_2023

./: README.md  pyproject.toml  pyproject_dist.toml  pyproject_sample.toml  requirements.txt  setup.py  testing.txt
.github/workflows/: coverage.yml  tests.yml
API_draft/: README.md  core_functions_module.py
docs/: Cross_Matching.py  Preprocessing.py  PreprocessingTest.py  README.md  conf.py  index.rst  milestone4.md  milestone5.md  practicequery.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/group9_package/subpkg_1/: core_functions_module.py  core_functions_module_extract.py  core_functions_module_modify.py  data_augmentation_module.py  visualize_module.py
src/group9_package/subpkg_2/: cross_matching_module.py  machine_learning_module.py
src/tests/subpkg_1/: test_core_functions_module.py
tests/: check_coverage.sh  run_tests.sh
tests/subpkg_1/: test_core_functions_module.py  test_core_functions_module_extract.py  test_core_functions_module_modify.py  test_unit_tests_core_functions_module_extract.py  test_unit_tests_core_functions_module_modify.py  test_unit_tests_data_augmentation_module.py  test_unit_tests_visualize_module.py  test_unittests_core_function_modify.py  test_unittests_core_function_module.py  test_visualize.py  test_visualize_module.py
tests/subpkg_2/: test_cross_matching_module.py  test_machine_learning_module.py  test_unit_tests_cross_matching_module.py  test_unit_tests_machine_learning_module.py
tutorial/: cs107_project_demo.ipynb
