[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teamm09_2023_package"
version = "0.0.1"
authors = [
    { name="Ricardo Linares"},
    { name="Zachary Stack"},
    { name="Hugo Nunez"},
    { name="Sameer Daas"},
    { name="Paul Alexis"},
]
description = "CI and Testing"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU LESSER GENERAL PUBLIC LICENSE",
    "Topic :: Software Development :: Testing"
]