[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "team09_cs107_2023"
version = "0.0.4"
authors = [
  { name="Hugo Nunez", email="hugonunez@college.harvard.edu" },
  { name="Zachary Stack", email="zstack@college.harvard.edu" },
  { name="Ricardo Linares", email="ricardolinares@college.harvard.edu" },
  { name="Sameer Das", email="sameerdas@college.harvard.edu" },
  { name="Paul Alexis", email="paulalexis@college.harvard.edu" }
]
description = "A spectral data analysis package for our client Victor Zhu for CS107"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
# Define the packages or directories to include in the wheel package
packages = ["src"]

# Necessary files outside of src
files = ["README.md", "LICENSE"]

# Exclude pycache in case
exclude = ["src/group9_package/__pycache__/*"]